# mighty-twin

./: .dockerignore  .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.toml  tsconfig.base.json
.claude/: settings.json
.github/workflows/: ci.yml
admin-panels/: README.md  package.json
admin-panels/src/: AdminShell.module.css
admin-panels/src/dev-tools/: DevToolsPage.tsx  WidgetInspector.tsx  index.ts
admin-panels/src/mock/: MockAdminShell.module.css  MockAdminShell.tsx  MockDataPage.tsx  MockLibraryPage.tsx  MockSitesPage.tsx  MockUsersPage.tsx  index.ts
app-shell/: README.md
app-shell/src/: types.ts
app-shell/src/components/: AppShell.module.css  AppShell.tsx  MobileTabSwitcher.tsx  TopBar.module.css  TopBar.tsx
app-shell/src/context/: ShellContext.tsx
app-shell/src/hooks/: useBreakpoint.ts  useResizeObserver.ts
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.toml
apps/api/src/twin_api/: __init__.py  ai_routes.py  analytics_routes.py  auth.py  bootstrap.py  config.py  db.py  demo_routes.py  design_data_routes.py  design_export_routes.py  design_import_routes.py  design_layer_preset_routes.py  design_models_routes.py  design_template_routes.py  dev_stubs.py  embed_routes.py  engine_routes.py  feature_import_routes.py  feature_routes.py  feed_routes.py  library_routes.py  mai_voxel_routes.py  main.py  me_routes.py  oauth_routes.py  pipes3d_config.py  public_routes.py  settings_routes.py  spatial_routes.py  story_routes.py  submission_routes.py  upload_routes.py  voxel_routes.py
apps/api/src/twin_api/feeds/: __init__.py  base.py  csv_url.py  geojson_url.py
apps/api/src/twin_api/mai_providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
apps/api/tests/: conftest.py  test_config_validator.py  test_csv_coerce.py  test_geometry_hint.py  test_oauth_state.py  test_package_manifest.py  test_sheets_translator.py
apps/web/: .env.local.example  Dockerfile  index.html  nginx.conf  package.json  railway.toml  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/public/data/: definition_key.json
apps/web/public/dev/add-data-widget/: index.html
apps/web/public/dev/ai-providers/: index.html
apps/web/public/dev/probe/: drag-activation.html  index.html  probe-path.html
apps/web/public/dev/voxel-ux/: generators.html  index.html  map-behaviors.html  materials.html  render-modes.html  toolbox.html
apps/web/src/: App.tsx  ErrorBoundary.tsx  ViewerSurface.tsx  branding.ts  main.tsx  styles.css  widgets.ts
apps/web/src/admin/: AdminRoot.tsx
apps/web/src/admin/components/: CommandPalette.tsx  LayerImportModal.tsx  LayerStyleEditor.tsx  SitesMapView.tsx
apps/web/src/admin/hooks/: useApi.js  useBreakpoint.js
apps/web/src/admin/layouts/: AppLayout.css  AppLayout.jsx
apps/web/src/admin/pages/: ApiKeysPage.jsx  DataPage.css  DataPage.jsx  DataPage.tsx  DataSourcePage.jsx  DataSourcePage.tsx  DiagnosticsPanel.tsx  EngineSettingsPanels.tsx  FeedsPage.tsx  HomePage.css  HomePage.jsx  IntegrationsPage.css  IntegrationsPage.jsx  LibraryPage.css  LibraryPage.jsx  ListPage.css  (+28 more)
apps/web/src/ai/: AISettings.css  AISettings.tsx  ChatPanel.tsx  DraggableMai.tsx  MaiContext.tsx  client.ts  sheetsClient.ts  storage.ts  tools.ts  types.ts  voxelChat.ts  voxelContext.ts
apps/web/src/test/: cesium-stub.ts
apps/web/src/types/: index.ts
apps/web/src/viewer/: ViewerRoot.tsx  vite-env.d.ts
cesium-core/: tsconfig.json
cesium-core/src/: index.ts
cesium-core/src/hooks/: useGlobePicker.ts
docs/: mcp-connector-plan.md
infra/: docker-compose.yml
infra/postgres-init/: 01-spatial.sql
mighty_api/src/mighty_api/: middleware.py
mighty_licensing/src/mighty_licensing/: __init__.py
mighty_migrations/src/mighty_migrations/: __init__.py  env.py
mighty_models/src/mighty_models/: __init__.py  site.py
mighty_spatial/src/mighty_spatial/: __init__.py  views.py
mockups/: IMPLEMENTATION.md  PROBE.md  desktop-tablet-redesign.html  index.html  mobile-redesign.html
python/mighty_api/: pyproject.toml
python/mighty_api/src/mighty_api/: __init__.py
python/mighty_core/: pyproject.toml
python/mighty_core/src/mighty_core/: __init__.py
python/mighty_db/: pyproject.toml
python/mighty_db/src/mighty_db/: __init__.py  spatialite.py
python/mighty_licensing/: pyproject.toml
python/mighty_migrations/: pyproject.toml
python/mighty_migrations/src/mighty_migrations/: __init__.py  env.py  script.py.mako
python/mighty_migrations/src/mighty_migrations/versions/: 20260416_0001_initial_sites_and_features.py  20260504_0002_users.py  20260504_0003_app_settings.py  20260504_0004_layers_data_sources.py  20260504_0005_story_maps.py  20260504_0006_snapshots_sketches.py  20260504_0007_public_sites.py  20260504_0008_library.py  20260505_0009_submissions.py  20260505_0010_feeds.py  20260510_0011_design_widget_port.py  20260510_0012_voxel_layers.py  20260511_0013_site_buildings_enabled.py
python/mighty_models/: pyproject.toml
python/mighty_models/src/mighty_models/: __init__.py  design_model.py  feed.py  layer.py  library.py  setting.py  site.py  snapshot.py  story_map.py  submission.py  types.py  user.py  voxel_layer.py
python/mighty_spatial/: pyproject.toml
python/mighty_spatial/src/mighty_spatial/: __init__.py  indexes.py  views.py
scripts/: test_mai_voxel.py
settings-panels/: README.md  package.json
settings-panels/src/: SettingsShell.tsx  index.ts  types.ts
settings-panels/src/panels/: ThemePanel.tsx
tokens/src/: index.ts
types/: package.json
types/src/: index.ts
ui/: tsconfig.json
utils/: README.md  tsconfig.json
utils/src/: index.ts
widget-host/: tsconfig.json
widget-host/src/: index.ts
widget-sdk/: README.md  package.json
widget-sdk/src/: index.ts
widgets/measure/: tsconfig.json  vitest.config.ts
widgets/measure/guide/: guide.md
widgets/measure/preview/: preview.tsx
widgets/measure/src/: MeasureWidget.module.css  MeasureWidget.tsx  measureUtils.ts  register.ts  types.ts  useMeasure.ts
widgets/measure/test/: measureUtils.test.ts
(+315 files in other folders)
