[project]
name = "mighty-twin-root"
version = "0.1.0"
description = "MightyTwin — root workspace for the FastAPI backend"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "apps/api",
    "python/mighty_api",
    "python/mighty_core",
    "python/mighty_db",
    "python/mighty_licensing",
    "python/mighty_migrations",
    "python/mighty_models",
    "python/mighty_spatial",
]
