[project]
name = "mighty_api"
version = "0.1.0"
description = "Shared FastAPI routers, middleware, and dependencies for Mighty platform backends"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "slowapi>=0.1.9",
    "mighty_core",
    "mighty_db",
    "mighty_models",
]
# Auth-related deps (bcrypt, pyjwt) live in consumer apps that implement
# the auth router (e.g. apps/api -> twin_api.auth). mighty_api currently
# exports middleware only; auth routers land per-consumer via factories.

[tool.uv.sources]
mighty_core = { workspace = true }
mighty_db = { workspace = true }
mighty_models = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mighty_api"]
