[project]
name = "mighty_core"
version = "0.1.0"
description = "Core utilities for Mighty platform backends — config, logging, errors, auth primitives"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mighty_core"]
