[project]
name = "mighty_db"
version = "0.1.0"
description = "SQLAlchemy engine + session factory — SQLite/SpatiaLite and PostGIS adapters"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.35",
    "geoalchemy2>=0.15.2",
    "mighty_core",
]

[tool.uv.sources]
mighty_core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mighty_db"]
