[project]
name = "mighty_licensing"
version = "0.1.0"
description = "License token validation for Mighty Twin on-prem deployments"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43.0.0",
    "pydantic>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mighty_licensing"]
