[project]
name = "mighty_models"
version = "0.1.0"
description = "SQLAlchemy 2.0 models with dialect-neutral type decorators for Mighty platform"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.35",
    "geoalchemy2>=0.15.2",
    "pydantic>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mighty_models"]
