[project]
name = "mighty_spatial"
version = "0.1.0"
description = "GeoAlchemy2 wrappers, shapely helpers, and dialect-dispatched spatial operations"
requires-python = ">=3.12"
dependencies = [
    "geoalchemy2>=0.15.2",
    "shapely>=2.0.6",
    "sqlalchemy>=2.0.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mighty_spatial"]
